Updated ModuleSystem
- Fixed all Bugs in the ModuleSystem
- Updated Test Plugins
- Updated all APIs